WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156145
REGRESSION (
r198653
,
r198864
): http/tests/contentdispositionattachmentsandbox/referer-header-stripped*.html tests crashing due to unavailable SPI
https://bugs.webkit.org/show_bug.cgi?id=156145
Summary
REGRESSION (r198653, r198864): http/tests/contentdispositionattachmentsandbox...
David Kilzer (:ddkilzer)
Reported
2016-04-03 10:12:03 PDT
The following tests are crashing on internal GuardMalloc bots for iOS 9.x since DataDetectors SPI is being used that isn't available: http/tests/contentdispositionattachmentsandbox/referer-header-stripped-with-meta-referer-always.html http/tests/contentdispositionattachmentsandbox/referer-header-stripped-with-meta-referer-default.html http/tests/contentdispositionattachmentsandbox/referer-header-stripped-with-meta-referer-never.html http/tests/contentdispositionattachmentsandbox/referer-header-stripped-with-meta-referer-no-referrer-when-downgrade.html http/tests/contentdispositionattachmentsandbox/referer-header-stripped-with-meta-referer-no-referrer.html http/tests/contentdispositionattachmentsandbox/referer-header-stripped-with-meta-referer-origin.html http/tests/contentdispositionattachmentsandbox/referer-header-stripped-with-meta-referer-unsafe-url.html http/tests/contentdispositionattachmentsandbox/referer-header-stripped.html
Attachments
Patch v1
(8.34 KB, patch)
2016-04-03 10:25 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
Patch v2
(8.34 KB, patch)
2016-04-03 10:35 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2016-04-03 10:13:53 PDT
<
rdar://problem/25515585
>
David Kilzer (:ddkilzer)
Comment 2
2016-04-03 10:25:09 PDT
Created
attachment 275501
[details]
Patch v1
David Kilzer (:ddkilzer)
Comment 3
2016-04-03 10:35:35 PDT
Created
attachment 275503
[details]
Patch v2
WebKit Commit Bot
Comment 4
2016-04-03 11:56:27 PDT
Comment on
attachment 275503
[details]
Patch v2 Clearing flags on attachment: 275503 Committed
r198986
: <
http://trac.webkit.org/changeset/198986
>
WebKit Commit Bot
Comment 5
2016-04-03 11:56:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug