REGRESSION (r198653, r198864): http/tests/contentdispositionattachmentsandbox/referer-header-stripped*.html tests crashing due to unavailable SPI <http://webkit.org/b/156145>

Reviewed by Tim Horton.

Covered by existing tests under GuardMalloc:

    http/tests/contentdispositionattachmentsandbox/referer-header-stripped-with-meta-referer-always.html
    http/tests/contentdispositionattachmentsandbox/referer-header-stripped-with-meta-referer-default.html
    http/tests/contentdispositionattachmentsandbox/referer-header-stripped-with-meta-referer-never.html
    http/tests/contentdispositionattachmentsandbox/referer-header-stripped-with-meta-referer-no-referrer-when-downgrade.html
    http/tests/contentdispositionattachmentsandbox/referer-header-stripped-with-meta-referer-no-referrer.html
    http/tests/contentdispositionattachmentsandbox/referer-header-stripped-with-meta-referer-origin.html
    http/tests/contentdispositionattachmentsandbox/referer-header-stripped-with-meta-referer-unsafe-url.html
    http/tests/contentdispositionattachmentsandbox/referer-header-stripped.html

* editing/cocoa/DataDetection.mm:
(WebCore::DataDetection::isDataDetectorLink):
(WebCore::DataDetection::shouldCancelDefaultAction):
- Restore iOS 9.x code.
(WebCore::DataDetection::detectContentInRange):
- Guard new SPI with version macros.

* platform/cocoa/DataDetectorsCoreSoftLink.h:
* platform/cocoa/DataDetectorsCoreSoftLink.mm:
- Guard new SPI with version macros.


Canonical link: https://commits.webkit.org/174266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198986 268f45cc-cd09-0410-ab3c-d52691b4dbfc